--- a/src/ResumeExperiences/EditExperience/styles.module.scss
+++ b/src/ResumeExperiences/EditExperience/styles.module.scss
@@ -49,3 +49,12 @@
     margin-bottom: 0;
   }
 }
+
+.currently-work-here-container {
+  display: flex;
+  justify-content: center;
+
+  @media (min-width: $sm-screen-min) {
+    display: block;
+  }
+}
